# KosherFlix

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  populateMongo.py  settings.gradle.kts
Android/app/: build.gradle.kts
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
NetflixProj3/: .gitignore  Dockerfile  README.md  app.js  docker-compose.yml  package-lock.json  package.json
NetflixProj3/NetflixProj2/: README.md  docker-compose.yml
NetflixProj3/NetflixProj2/src/server/: App.cpp  App.h  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  CommandUtils.cpp  CommandUtils.h  Commands.h  Delete.cpp  Delete.h  Dockerfile  Get.cpp  Get.h  HelpDisplay.cpp  HelpDisplay.h  ICommand.h  IThreadsManager.h  InputValidator.cpp  InputValidator.h  MultiThreadsManager.cpp  MultiThreadsManager.h  Patch.cpp  Patch.h  Post.cpp  Post.h  RecExecuter.cpp  RecExecuter.h  Server  ServerLogic.cpp  ServerLogic.h  ThreadpoolManager.cpp  ThreadpoolManager.h  server.cpp  server.h
NetflixProj3/NetflixProj2/src/server/data_access/: DataAccess.hpp  FileDataAccess.cpp  FileDataAccess.hpp
NetflixProj3/NetflixProj2/src/server/tests/: App2_tests.cpp  DELETCommandTests.cpp  FileDataAccess_tests.cpp  HelpCommandTests.cpp  PatchTests.cpp  PostTests.cpp  RecExecuter_tests.cpp  Server_tests.cpp  inputValidator_tests.cpp
NetflixProj3/controllers/: category.js  movie.js  token.js  user.js
NetflixProj3/models/: category.js  movie.js  user.js
NetflixProj3/routes/: category.js  movie.js  token.js  user.js
NetflixProj3/services/: category.js  movie.js  token.js  user.js
React/: Dockerfile  docker-compose.yml  package-lock.json  package.json
React/public/: index.html
React/public/images/: Brooklyn-99.avif
React/src/: App.css  App.js  index.css
React/src/components/: AdminBar.js  AdminCategoryForm.js  AdminCategoryRow.js  AdminMovieCard.js  AutoForm.js  CategoryAddModal.js  CategoryEditModal.js  CategoryRow.js  ErrorPage.js  HomeScreenVideo.js  MovieAddModal.js  MovieCard.js  (+11 more)
app/: build.gradle.kts
wiki/Getting_Started/: Android_Run_And_Install.md  Running_And_Instalations.md  Web_Run_And_Install.md
wiki/Introduction/: Overview.md
(+188 files in other folders)
